[gd_scene load_steps=3 format=3 uid="uid://dj6gi8av4ybae"]

[ext_resource type="FontFile" uid="uid://cwsnkghnjdfdp" path="res://Assets/Early GameBoy.ttf" id="1_font"]
[ext_resource type="Script" path="res://scripts/ui/deck_editor.gd" id="2_script"]

[node name="DeckEditor" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 48
text = "Deck Editor"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 24
text = "Available Ingredients"

[node name="IngredientList" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/LeftPanel/IngredientList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 24
text = "Current Deck"

[node name="DeckList" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel/DeckList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeckCountLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/RightPanel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 18
text = "Total Cards: 0"

[node name="BottomPanel" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="DeckNameLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomPanel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 20
text = "Deck Name:"

[node name="DeckNameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/BottomPanel"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 20
placeholder_text = "Enter deck name"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/BottomPanel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 20
text = "Save Deck"

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer/BottomPanel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 20
text = "Load Deck"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/BottomPanel"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 20
text = "Close"
